--- a/packages/core/src/components/brx-button/_mixins.scss
+++ b/packages/core/src/components/brx-button/_mixins.scss
@@ -42,7 +42,7 @@
     border-radius: var(--button-radius);
     color: var(--interactive);
     cursor: pointer;
-    display: inline-flex;
+    display: flex;
     font-size: var(--font-size-scale-up-01);
     font-weight: var(--font-weight-semi-bold);
     height: var(--button-size);
@@ -53,7 +53,7 @@
     text-align: center;
     vertical-align: middle;
     white-space: nowrap;
-    width: auto;
+    width: 100%;
   }
 }
 
