docs(core): header: set keep-target-visible-when-hidden

--- a/packages/core/src/html/components/header.html
+++ b/packages/core/src/html/components/header.html
@@ -48,7 +48,7 @@
                 <brx-header-actions>
                   <brx-header-links>
                     <brx-dropdown>
-                      <brx-dropdown-trigger target="#header-padrao-ar">
+                      <brx-dropdown-trigger keep-target-visible-when-hidden target="#header-padrao-ar">
                         <brx-button type="button" aria-label="Abrir Acesso Rápido" circle size="small">
                           <brx-icon name="fa5/fas/ellipsis-v"> </brx-icon>
                         </brx-button>
@@ -76,7 +76,7 @@
 
                   <brx-header-functions class="dropdown">
                     <brx-dropdown>
-                      <brx-dropdown-trigger target="#header-padrao-fs">
+                      <brx-dropdown-trigger keep-target-visible-when-hidden target="#header-padrao-fs">
                         <brx-button type="button" data-toggle="dropdown" aria-label="Abrir Funcionalidades do Sistema" circle size="small">
                           <brx-icon name="fa5/fas/th"> </brx-icon>
                         </brx-button>
@@ -172,7 +172,7 @@
                 <brx-header-actions>
                   <brx-header-links>
                     <brx-dropdown>
-                      <brx-dropdown-trigger target="#header-compacto-ar">
+                      <brx-dropdown-trigger keep-target-visible-when-hidden target="#header-compacto-ar">
                         <brx-button type="button" aria-label="Abrir Acesso Rápido" circle size="small">
                           <brx-icon name="fa5/fas/ellipsis-v"> </brx-icon>
                         </brx-button>
@@ -200,7 +200,7 @@
 
                   <brx-header-functions class="dropdown">
                     <brx-dropdown>
-                      <brx-dropdown-trigger target="#header-compacto-fs">
+                      <brx-dropdown-trigger keep-target-visible-when-hidden target="#header-compacto-fs">
                         <brx-button type="button" data-toggle="dropdown" aria-label="Abrir Funcionalidades do Sistema" circle size="small">
                           <brx-icon name="fa5/fas/th"> </brx-icon>
                         </brx-button>
@@ -296,7 +296,7 @@
               <brx-header-actions>
                 <brx-header-links>
                   <brx-dropdown>
-                    <brx-dropdown-trigger target="#header-1-dw-1">
+                    <brx-dropdown-trigger keep-target-visible-when-hidden target="#header-1-dw-1">
                       <brx-button type="button" aria-label="Abrir Acesso Rápido" circle size="small">
                         <brx-icon name="fa5/fas/ellipsis-v"></brx-icon>
                       </brx-button>
@@ -325,7 +325,7 @@
 
                 <brx-header-functions>
                   <brx-dropdown>
-                    <brx-dropdown-trigger target="#header-1-dw-2">
+                    <brx-dropdown-trigger keep-target-visible-when-hidden target="#header-1-dw-2">
                       <brx-button type="button" data-toggle="dropdown" aria-label="Abrir Funcionalidades do Sistema" circle size="small">
                         <brx-icon name="fa5/fas/th"> </brx-icon>
                       </brx-button>
@@ -436,7 +436,7 @@
               <brx-header-actions>
                 <brx-header-links>
                   <brx-dropdown>
-                    <brx-dropdown-trigger target="#header-2-dw-1">
+                    <brx-dropdown-trigger keep-target-visible-when-hidden target="#header-2-dw-1">
                       <brx-button type="button" aria-label="Abrir Acesso Rápido" circle size="small">
                         <brx-icon name="fa5/fas/ellipsis-v"></brx-icon>
                       </brx-button>
@@ -465,7 +465,7 @@
 
                 <brx-header-functions>
                   <brx-dropdown>
-                    <brx-dropdown-trigger target="#header-2-dw-2">
+                    <brx-dropdown-trigger keep-target-visible-when-hidden target="#header-2-dw-2">
                       <brx-button type="button" data-toggle="dropdown" aria-label="Abrir Funcionalidades do Sistema" circle size="small">
                         <brx-icon name="fa5/fas/th"> </brx-icon>
                       </brx-button>
